# VibeCodingPractice

./: .env.example  .gitignore  BRANCHING.MD  BRANCH_REVIEW.MD  Dockerfile  GUIDE.MD  GUIME.MD  OPENCLAW.MD  README.md  SECURITY.MD  docker-compose.yml  pyproject.toml
README/: 2026-02-16_README.MD  2026-02-16_REAMD.ME  2026-02-16_REME.MD
data/: sample_us_stock.csv
src/namoo_overseas_bot/: __init__.py  cli.py  config.py  engine.py  models.py  server_cli.py  telegram_check_cli.py
src/namoo_overseas_bot/brokers/: __init__.py  base.py  namoo_stub.py  paper.py
src/namoo_overseas_bot/market_data/: __init__.py  csv_feed.py
src/namoo_overseas_bot/notifiers/: __init__.py  base.py  noop.py  telegram.py
src/namoo_overseas_bot/runtime/: __init__.py  api_server.py  paper_bot.py  telegram_commands.py
src/namoo_overseas_bot/strategies/: __init__.py  sma_cross.py
tests/: test_api_server.py  test_config.py  test_paper_broker.py  test_paper_trading_bot.py  test_strategy.py  test_telegram_command_handler.py
