[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "namoo-overseas-bot"
version = "0.1.0"
description = "Overseas stock trading bot scaffold for Namoo (NH)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "VibeCodingPractice" }]
dependencies = []

[project.scripts]
namoo-bot = "namoo_overseas_bot.cli:main"
namoo-bot-server = "namoo_overseas_bot.server_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
